Update project links with actual URLs

--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
                 <div class="links-container">
                     <h3 style="color: var(--primary-purple); margin-bottom: 20px;">🔗 PROJECT LINKS</h3>
                     <ul class="project-links">
-                        <li><strong>Lovable MVP (Web App):</strong> [Insert your Lovable URL]</li>
-                        <li><strong>Java Processing Visualizer (Desktop):</strong> [Insert GitHub repo or build link]</li>
-                        <li><strong>UX Tweak Study Board:</strong> [Insert UX Tweak link]</li>
+                        <li><strong>Lovable MVP (Web App):<a href="https://xmarkslocation-moodmaps.lovable.app" target="_blank">Lovable MVP (Web App)</a></strong></li>
+                        <li><strong>Java Processing Visualizer (PC) GitHub Repo:<a href="https://github.com/NgaaG/playlistviusalizerjp" target="_blank">Java Processing Visualizer:GITHIB REPO</a></strong>]</li>
+                        <li><strong>UX Tweak Study Board:<a href="https://study.uxtweak.com/webusability/2pp67q1GmFj2Kem1Vl3DI" target=" _blank">UX Tweak:MVP unmoderated user test: Pot-Study Userbility Questionnaire </a></strong> </li>
                         <li><strong>GitHub Monorepo:</strong> [Insert link]
                             <br><span style="font-size: 0.9rem; color: var(--gray-text);">Folders: /lovable-app, /processing-visualizer, /notion-docs</span>
                         </li>
